@@ -1,3 +1,9 @@
+2011-03-16  Bastian Maerkisch  <bmaerkisch@web.de>
+
+	* src/win/wtext.c (TextCopyClip): Fix copying of last line of a
+	marked region in case the marking exceeds the length of that
+	line.
+
 2011-03-17  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* axis.c(gen_tics): Make sure the axis tic label format string is
